--- a/source/admin/views/admin/student/studentsList.ejs
+++ b/source/admin/views/admin/student/studentsList.ejs
@@ -19,41 +19,42 @@
         <%- include('../common/header',{user: user}); -%>
         <%- include('../common/column_left'); -%>
         <div id="content">
+
             <div class="page-header">
                 <div class="container-fluid">
                     <div class="pull-right">
-                        <button class="btn btn-primary" id="addCategory">
+                        <button class="btn btn-primary" id="addStudent">
                             <i class="fa fa-plus"></i>
                         </button>
                     </div>
                     <h2><%= data.title %></h2>
                 </div>
             </div>
-            <% if (data.Categories) { %>
-                <div class="Courses_list text-center">
+            <% if (data.students) { %>
+                <div class="Students_list text-center">
                     <div class="col-sm-10 center ">
                         <div class="table-responsive">
                             <table class="table table-bordered table-hover">
                                 <thead>
                                     <tr>
                                       <td class="text-left"><a>Tên</a></td>
-                                      <td class="text-left">Học sinh</td>
-                                      <td class="text-left"><a>Ngày đăng</a></td>
+                                      <td class="text-left"> Email</td>
+                                      <td class="text-left"><a>Giới tính</a></td>
                                       <td class="text-left"><a>Action</a></td>
                                     </tr>
                                   </thead>
                                   <tbody>
-                                    <% data.Categories.forEach((Category) => { %>
+                                    <% data.students.forEach((student) => { %>
                                         <tr>
-                                            <td class="text-left"><a> <%=Category.name %></a></td>
-                                            <td class="text-left"><a> <%=Category.numberOfView %></a></td>
-                                            <td class="text-left"><a> <%=Category.numberOfSignUp %></a></td>
+                                            <td class="text-left"><a> <%=student.name %></a></td>
+                                            <td class="text-left"><a> <%=student.email %></a></td>
+                                            <td class="text-left"><a> <%=student.gender %></a></td>
                                             <td class="text-left">
-                                                <input type="hidden" value="<%=Category._id %>">
-                                                <button class="btn btn-primary viewCategory">
+                                                <input type="hidden" value="<%=student._id %>">
+                                                <button class="btn btn-primary viewStudent" >
                                                     <i class="fa fa-pencil"></i>
                                                 </button>
-                                                <button class="btn btn-danger deleteCategory">
+                                                <button class="btn btn-danger deleteStudent" >
                                                     <i class="fa fa-trash"></i>
                                                 </button>
                                             </td>
@@ -76,27 +77,26 @@
 </body>
 <script>
     $(document).ready(function() {
-        $('.viewCategory').on('click', function() {
+        $('.viewStudent').on('click', function() {
             id = $(this).parent().find("input").val();
-            window.location.href = "/admin/course/categoryEdit?id=" + id;
+            window.location.href = "/admin/Student/StudentEdit?id=" + id;
         });
 
-        $('.deleteCategory').on('click', function() {
+        $('.deleteStudent').on('click', function() {
             id = $(this).parent().find("input").val();
-            $.getJSON("/admin/course/categoryDelete?id=" + id ,function( json ) {
+            $.getJSON("/admin/student/studentDelete?id=" + id ,function( json ) {
                 if(json === true){
-                    alert("Xóa Category thành công");
+                    alert("Xóa học viên thành công");
                 }else{
-                    alert("Xóa Category thất bại");
+                    alert("Xóa học thất bại");
                 }
-                window.location.href = "/admin/course/categoryList";
+                window.location.href = "/admin/Student/StudentsList";
             });
         });
-        $('#addCategory').on('click', function() {
-            window.location.href = "/admin/course/categoryList";
+        $('#addStudent').on('click', function() {
+            window.location.href = "/admin/Student/StudentAdd";
         });
-        
-    });
+   });
 </script>
 </html>
 
