--- a/source/user-guest/code/views/partials/card-course.ejs
+++ b/source/user-guest/code/views/partials/card-course.ejs
@@ -32,7 +32,7 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
-            <p style="display: inline-block;" class="numberOfEvaluation">(<%=  course.numberOfEvaluation%> luợt
+            <p style="display: inline-block;" class="numberOfEvaluation">(<%=  course.userEvaluations.length%> luợt
                 đánh giá)
             </p>
             <p class="tuition">$<%=  course.tuition%></p>
