--- a/source/user-guest/code/views/payment/checkout.ejs
+++ b/source/user-guest/code/views/payment/checkout.ejs
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB_CTT2</title>
-    <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <style>
         body {
             height: 100vh;
