--- a/source/user-guest/code/views/layout.ejs
+++ b/source/user-guest/code/views/layout.ejs
@@ -11,7 +11,8 @@
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.3/css/fileinput.min.css">
     <link href="https://vjs.zencdn.net/7.10.2/video-js.css" rel="stylesheet" />
-    
+   <link rel="stylesheet" href="/public/css/layout.css"></link>
+   <link rel="shortcut icon" href="/public/logo.png" />
 </head>
 
 <body>
@@ -25,6 +26,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.3/js/fileinput.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.3/themes/fa/theme.min.js"></script>
     <script src="https://vjs.zencdn.net/7.10.2/video.min.js"></script>
+    <%- include('./partials/toolbar', {
+        isAuthenticated: isAuthenticated
+    }) %> 
     <%- body %>
 </body>
 </html>
