--- a/source/user-guest/code/views/user/account.ejs
+++ b/source/user-guest/code/views/user/account.ejs
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <%- include('../partials/toolbar', {isAuthenticated: isAuthenticated}) %>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.3/css/fileinput.min.css">
@@ -231,3 +230,15 @@
         });
     </script>
 </body>
+
+<style>
+    #header-logo img{
+        margin-top: -17px;
+    }
+    .search input{
+        width: 100%!important;
+    }
+    .search button{
+        border: 1px solid;
+    }
+</style>
