--- a/source/user-guest/code/views/user/login.ejs
+++ b/source/user-guest/code/views/user/login.ejs
@@ -1,9 +1,9 @@
-<div class="row mt-5">
+<%- include('../partials/messages') %> 
+<div class="row mt-5 ">
     <div class="col-md-6 m-auto">
         <div class="card card-body">
             <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i> Login</h1>
-            <%- include('../partials/messages')  %> 
-            <form action="/users/login" method="POST">
+            <form action="#" method="POST" id="form-login">
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email" />
@@ -12,11 +12,18 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" class="form-control"
                         placeholder="Enter Password" />
+                    <br>
                 </div>
-                <button type="submit" class="btn btn-primary btn-block">Login</button>
+                <div class="form-group login-button text-center">
+                    <button type="submit" class="btn btn-danger btn-block">Login</button>
+                    <a href="/users/auth/facebook" class="btn btn-primary btn-block"><i class="fab fa-facebook-square"></i> Login with Facebook</a>
+                </div>
             </form>
+            <p style="text-align: center;">
+                or <a href="#" style="color: red;">Forgot password?</a>
+            </p>
             <p class="lead mt-4">
-                No Account? <a href="/users/register">Register</a>
+                No Account? <a href="#" style="color: red;">Register</a>
             </p>
         </div>
     </div>
