--- a/source/user-guest/code/public/css/layout.css
+++ b/source/user-guest/code/public/css/layout.css
@@ -1,30 +1,4 @@
-/* STRUCTURE */
-
-.wrapper {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  min-height: 100%;
-  padding: 20px;
-}
-
-#formContent {
-  -webkit-border-radius: 10px 10px 10px 10px;
-  border-radius: 10px 10px 10px 10px;
-  background: #fff;
-  padding: 30px;
-  width: 90%;
-  max-width: 450px;
-  position: relative;
-  padding: 0px;
-  -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
-  box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
-  text-align: center;
-}
-
-#formFooter {
+ooter {
   background-color: #f6f6f6;
   border-top: 1px solid #dce8f1;
   padding: 25px;
@@ -520,7 +494,7 @@ a {
 }
 
 #header .search .form-inline {
-  margin-left: -260px;
+  margin-left: -100px;
 }
 
 .container-wrap {
@@ -566,4 +540,80 @@ a {
 
 .btn-outline-warning.my-2:hover {
   color: #000000;
+}
+
+@media (min-width: 992px) {
+  .dropdown-menu .dropdown-toggle:after {
+    border-top: .3em solid transparent;
+    border-right: 0;
+    border-bottom: .3em solid transparent;
+    border-left: .3em solid;
+  }
+
+  .dropdown-menu .dropdown-menu {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .dropdown-menu li {
+    position: relative;
+  }
+
+  .nav-item .submenu {
+    display: none;
+    position: absolute;
+    left: 100%;
+    top: -7px;
+  }
+
+  .nav-item .submenu-left {
+    right: 100%;
+    left: auto;
+  }
+
+  .dropdown-menu>li:hover {
+    background-color: #f1f1f1
+  }
+
+  .dropdown-menu>li:hover>.submenu {
+    display: block;
+  }
+
+
+}
+
+.menu a.nav-link {
+  color: #fff;
+  font-size: 18px;
+}
+
+.menu a.dropdown-item {
+  float: left;
+}
+
+.menu a i {
+  float: right;
+  margin-top: 4px;
+}
+
+.featured a.dropdown-item {
+  color: #000 !important;
+
+}
+
+.featured .dropdown-menu a {
+  color: #000 !important;
+}
+
+.featured .dropdown-menu li {
+  padding: 8px;
+}
+
+.featured .dropdown-menu {
+  margin-left: 12px;
+  margin-top: 12px;
+}
+
+.featured .logout {
+  padding: 6px;
 }
